--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,7 @@
   ],
   "hints": {
     "compat-api/css": "off",
-    "axe/text-alternatives": "off"
+    "axe/text-alternatives": "off",
+    "disown-opener": "off"
   }
 }
